APEX-104: Blocks enabled

--- a/config/campbell/default/block.block.exposedformacquia_product_search_solrproduct_search.yml
+++ b/config/campbell/default/block.block.exposedformacquia_product_search_solrproduct_search.yml
@@ -1,6 +1,6 @@
 uuid: d1e8309e-b47a-47ec-9171-ead5405b82fe
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - views.view.acquia_product_search_solr
