--- a/config/campbell/default/block.block.exposedformacquia_product_search_solrproduct_search_2.yml
+++ b/config/campbell/default/block.block.exposedformacquia_product_search_solrproduct_search_2.yml
@@ -1,6 +1,6 @@
 uuid: 19d85234-d784-474a-a198-622364dbf7cf
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - views.view.acquia_product_search_solr
@@ -11,7 +11,7 @@ dependencies:
 id: exposedformacquia_product_search_solrproduct_search_2
 theme: campbell
 region: footer_fifth
-weight: 0
+weight: -34
 provider: null
 plugin: 'views_exposed_filter_block:acquia_product_search_solr-product_search'
 settings:
