--- a/config/campbell/default/block.block.views_block__acquia_search_non_product_search.yml
+++ b/config/campbell/default/block.block.views_block__acquia_search_non_product_search.yml
@@ -1,6 +1,6 @@
 uuid: 454e487d-e4f7-4946-b9a9-0b6e7c93f568
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - views.view.acquia_search
