Added missing download options in downloads

--- a/config/clecotools/default/field.storage.media.field_type.yml
+++ b/config/clecotools/default/field.storage.media.field_type.yml
@@ -83,6 +83,36 @@ settings:
     -
       value: 3d_model
       label: '3d Model'
+    -
+      value: certificates
+      label: Certificates
+    -
+      value: dxe_file
+      label: 'DXF File'
+    -
+      value: igs_file
+      label: 'IGS File'
+    -
+      value: line_art
+      label: 'Line Art'
+    -
+      value: maintenance_instruction
+      label: 'Maintenance Instruction'
+    -
+      value: repair_manual
+      label: 'Repair Manual'
+    -
+      value: stp_file
+      label: 'STP File'
+    -
+      value: trouble_shooting
+      label: 'Trouble Shooting'
+    -
+      value: warranty
+      label: Warranty
+    -
+      value: installation_note
+      label: 'Installation Note'
   allowed_values_function: ''
 module: options
 locked: false
