APEX-407: Default miles added in where to buy

--- a/config/campbell/default/views.view.markers_map.yml
+++ b/config/campbell/default/views.view.markers_map.yml
@@ -1951,7 +1951,7 @@ display:
             placeholder: ''
           is_grouped: true
           group_info:
-            label: 'Find stores (in miles)'
+            label: 'FIND 10 STORES (IN MILES)'
             description: ''
             identifier: field_location_proximity
             optional: false
