APEX-376: Feature block added in landing page

--- a/config/campbell/default/block.block.exposedformacquia_product_search_solrproduct_search_3.yml
+++ b/config/campbell/default/block.block.exposedformacquia_product_search_solrproduct_search_3.yml
@@ -1,6 +1,6 @@
 uuid: 36251946-6e90-4f4f-86a8-2dc975bf74ad
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - views.view.acquia_product_search_solr
