--- a/config/campbell/default/views.view.featured_menu_product.yml
+++ b/config/campbell/default/views.view.featured_menu_product.yml
@@ -5,8 +5,10 @@ dependencies:
   config:
     - field.storage.node.field_long_description
     - field.storage.node.field_media
+    - image.style.featured_menu_product
     - node.type.product
   module:
+    - media
     - node
     - user
 id: featured_menu_product
@@ -138,9 +140,12 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
-          type: entity_reference_entity_view
+          type: media_thumbnail
           settings:
-            view_mode: embed
+            image_link: ''
+            image_style: featured_menu_product
+            image_loading:
+              attribute: lazy
           group_column: target_id
           group_columns: {  }
           group_rows: true
