APS-18: configuration changes, banner message, config ignore changes

--- a/config/crescenttool/default/config_ignore.settings.yml
+++ b/config/crescenttool/default/config_ignore.settings.yml
@@ -5,4 +5,6 @@ ignored_config_entities:
   - 'acquia_connector.settings:spi.site_uuid'
   - 'search_api.server.acquia_search_server:backend_config.connector_config'
   - 'webform.webform.*'
+  - ~webform.webform.warranty_abusers
+  - ~webform.webform.warranty_replacement_form.yml
   - 'crescenttool.settings:cookiebot_cbid'
