--- a/config/crescenttool/default/webform.webform.warranty_abusers.yml
+++ b/config/crescenttool/default/webform.webform.warranty_abusers.yml
@@ -16,8 +16,8 @@ elements: |-
   name:
     '#type': textfield
     '#title': Name
-    '#description': 'First name and Last name of the abuser'
-    '#help': 'Please enter name of the abuser'
+    '#description': 'First and Last name of the abuser'
+    '#help': 'Please enter the first and last name of the abuser'
     '#required': true
   email:
     '#type': email
@@ -25,6 +25,12 @@ elements: |-
     '#description': 'Email of the abuser'
     '#help': 'Please enter email id of the abuser'
     '#required': true
+    '#unique': true
+  mailing_adress:
+    '#type': textarea
+    '#title': 'Mailing Adress'
+    '#description': 'Mailing address of the abuser'
+    '#help': 'Address of the abuser, if any'
 css: ''
 javascript: ''
 settings:
