--- a/config/sata_us/default/config_ignore.settings.yml
+++ b/config/sata_us/default/config_ignore.settings.yml
@@ -5,6 +5,8 @@ ignored_config_entities:
   - 'acquia_connector.settings:spi.site_uuid'
   - 'search_api.server.acquia_search_server:backend_config.connector_config'
   - 'webform.webform.*'
+  - ~webform.webform.warranty_abusers
+  - ~webform.webform.warranty_replacement_form.yml
   - 'sata.settings:price_spider_hide'
   - 'sata.settings:price_spider_generic_key'
   - 'sata.settings:price_spider_product_key'
