APEX-334: search updated FE

--- a/docroot/themes/custom/campbell/campbell.libraries.yml
+++ b/docroot/themes/custom/campbell/campbell.libraries.yml
@@ -75,6 +75,7 @@ brand-timeline:
       //cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css: { type: external, minified: true }
   js:
     //cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js: { type: external, minified: true }
+    //cdnjs.cloudflare.com/ajax/libs/underscore.js/1.13.1/underscore-min.js: { type: external, minified: true }
     js/brand-timeline.js: {}
 
   dependencies:
