APEX-140:Added Product migration.

--- a/config/clecotools/default/migrate_plus.migration.cleco_product_classifications_level_one.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_classifications_level_one.yml
@@ -1,7 +1,9 @@
-uuid: 512ff3c2-e545-4aca-bb37-0d25420b1b32
+uuid: 1371aa48-a2d0-4d12-baa1-d36732c5bade
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: 1dGhfqKyL22UM_LRf53W2-2jxFNnkZoXrjQABVWX4zk
 id: cleco_product_classifications_level_one
 class: null
 field_plugin_method: null
