--- a/config/clecotools/default/migrate_plus.migration.cleco_product_classifications_level_one_de.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_classifications_level_one_de.yml
@@ -1,7 +1,9 @@
-uuid: bb383067-579b-40df-9c85-f69f800d2ff9
+uuid: 922e7d38-b8e5-4e69-bed1-fc1e41dc114f
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: IArVuN-QdOTjuYZRq8D5oyOUVQ7fWl_sRTNCc2QeiQs
 id: cleco_product_classifications_level_one_de
 class: null
 field_plugin_method: null
