--- a/config/clecotools/default/migrate_plus.migration.cleco_product_classifications_level_one_gb.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_classifications_level_one_gb.yml
@@ -1,7 +1,9 @@
-uuid: 19edc2f9-7924-4862-9481-dc89c4d1ad9d
+uuid: bb8f4f99-893a-4de8-9739-427e1d5f0659
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: QnOjFZNWIuIUzA7lZ5OIuCLq-3veUqpjBWD3q2SghhU
 id: cleco_product_classifications_level_one_gb
 class: null
 field_plugin_method: null
