--- a/config/clecotools/default/migrate_plus.migration.cleco_product_classifications_level_two.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_classifications_level_two.yml
@@ -1,7 +1,9 @@
-uuid: c58ef242-4708-4a74-976b-41f5592d360f
+uuid: 4b79f763-a19a-43a6-a46f-7bd7b53a2ddc
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: w3Lkgbtwrl_pWECUUAjJryNUzfmsvJHoXIdXaG1Osfc
 id: cleco_product_classifications_level_two
 class: null
 field_plugin_method: null
