--- a/config/clecotools/default/migrate_plus.migration.cleco_product_specifications.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_specifications.yml
@@ -1,7 +1,9 @@
-uuid: 89199a6e-4ce6-4ee8-9d87-725e0c5c4e75
+uuid: 004fef72-621d-4ef3-a284-b27422a8f7d0
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: f7IlW1HIRveDrFIt9zj7Gvnn2vDINAASWj_MqDG_xkc
 id: cleco_product_specifications
 class: null
 field_plugin_method: null
