--- a/config/clecotools/default/migrate_plus.migration.cleco_product_specifications_de.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_specifications_de.yml
@@ -1,7 +1,9 @@
-uuid: 43a484ae-dcef-4da2-ac65-8cbf13c754d2
+uuid: e3397147-dc1d-4b9f-b7fd-e12bc7ad5cec
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: pulrpR1mwIofKFpBCrFDVuinduBUvf32LYpPLk34gtA
 id: cleco_product_specifications_de
 class: null
 field_plugin_method: null
