--- a/config/clecotools/default/migrate_plus.migration.cleco_product_specifications_gb.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_specifications_gb.yml
@@ -1,7 +1,9 @@
-uuid: 2c151bd9-9710-4111-8011-a93c648afbbf
+uuid: 2b49de94-d7c8-4a01-b0ef-523560c46d0b
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: 2L6uHfAt-sIE5Ng0OIxHMQ_za41-MgmxmLDsMtlNUKI
 id: cleco_product_specifications_gb
 class: null
 field_plugin_method: null
