--- a/config/clecotools/default/migrate_plus.migration.cleco_products_asset_category_de.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_products_asset_category_de.yml
@@ -1,14 +1,16 @@
-uuid: b90c9038-7889-47bf-b201-aa5d65ab375f
+uuid: 2713eb13-fac6-4451-96b5-688b8554785f
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: 1OfVTiwfzWupYPQVFSlsZx5XBuFMkoFDZybwMJMYTSI
 id: cleco_products_asset_category_de
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: cleco
-label: 'Asset media Language de'
+label: 'Update product download Type and Category for language DE'
 source:
   constants:
     bool_0: 0
