--- a/config/clecotools/default/migrate_plus.migration_group.cleco.yml
+++ b/config/clecotools/default/migrate_plus.migration_group.cleco.yml
@@ -1,7 +1,9 @@
-uuid: c4c25358-5319-492b-9bc9-0d357cbe4ad3
+uuid: 3c01d4fb-59b6-4137-9344-b9cd755ae959
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: QcK66lnQlSEXLBYamYLnDkY52SeysK9yLpsJMz0OZ50
 id: cleco
 label: 'Cleco Migrations'
 description: 'Cleco Migrations'
