--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_classifications_level_two_de.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_classifications_level_two_de.yml
@@ -1,6 +1,6 @@
 # Migration configuration for cleco_product_classifications content.
 id: cleco_product_classifications_level_two_de
-label: Product Classifications - Level Two (Language de)
+label: Product Classifications - Level Two (Language DE)
 migration_group: cleco
 source:
   plugin: url
