--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_specifications_child_de.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_specifications_child_de.yml
@@ -1,5 +1,5 @@
 id: cleco_product_specifications_child_de
-label: Product Specifications for language de
+label: Product Specifications Child level for language DE
 migration_group: cleco
 source:
   constants:
