--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_specifications_child_gb.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_specifications_child_gb.yml
@@ -1,5 +1,5 @@
 id: cleco_product_specifications_child_gb
-label: Product Specifications for language gb
+label: Product Specifications Child level for language GB
 migration_group: cleco
 source:
   constants:
