--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_specifications_list.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_specifications_list.yml
@@ -1,5 +1,5 @@
 id: cleco_product_specifications_list
-label: Product Specifications list for all languages
+label: Product Specifications second level for all languages
 migration_group: cleco
 source:
   constants:
