--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_products_asset_category.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_products_asset_category.yml
@@ -1,6 +1,6 @@
 # Migration configuration for cleco_products content.
 id: cleco_products_asset_category
-label: Products
+label: Update product download Type and Category
 migration_group: cleco
 source:
   constants:
