--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_products_asset_category_de.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_products_asset_category_de.yml
@@ -1,6 +1,6 @@
 # Migration configuration for cleco_products content.
 id: cleco_products_asset_category_de
-label: Asset media Language de
+label: Update product download Type and Category for language DE
 migration_group: cleco
 source:
   constants:
