--- a/config/clecotools/default/migrate_plus.migration.cleco_product_classifications_level_two_de.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_classifications_level_two_de.yml
@@ -1,14 +1,16 @@
-uuid: dcde82ca-acb8-4473-91b0-2c40b4a60ff4
+uuid: 5425b9e9-e1f5-468f-bee5-7fd043d9214a
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: EWnUg6lm2CG3uQ7PMn4sHTn6oXT9cjq2Nx5aFn2Yyt8
 id: cleco_product_classifications_level_two_de
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: cleco
-label: 'Product Classifications - Level Two (Language de)'
+label: 'Product Classifications - Level Two (Language DE)'
 source:
   plugin: url
   data_fetcher_plugin: file
