--- a/config/clecotools/default/migrate_plus.migration.cleco_product_classifications_level_two_gb.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_classifications_level_two_gb.yml
@@ -1,14 +1,16 @@
-uuid: b2006837-5f79-4685-8eb6-9d36ecdfcea6
+uuid: 3e3fcd7f-a399-4d3b-9b6e-a5f815eae457
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: jVF0NAZPwEOredfgsFkNgA_HmkW5HPpr2VKyi6zd-8g
 id: cleco_product_classifications_level_two_gb
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: cleco
-label: 'Product Classifications - Level Two (Language gb)'
+label: 'Product Classifications - Level Two (Language GB)'
 source:
   plugin: url
   data_fetcher_plugin: file
