--- a/config/clecotools/default/migrate_plus.migration.cleco_product_media.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_media.yml
@@ -1,7 +1,9 @@
-uuid: 1cc9d2a0-1fc2-484f-b481-dc4cb9f03b98
+uuid: 17e75645-10fe-4541-81da-83cd4fbd6827
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: ljZJ1R_RtK0Ss_PZL674G3XtTqKCSonNFjW3-9tdous
 id: cleco_product_media
 class: null
 field_plugin_method: null
@@ -10,6 +12,8 @@ migration_tags: null
 migration_group: cleco
 label: 'Product Media asset migration'
 source:
+  constants:
+    uid_root: 1
   plugin: url
   data_fetcher_plugin: file
   data_parser_plugin: simple_xml
@@ -58,6 +62,7 @@ process:
     plugin: skip_on_empty
     method: row
     source: asset_id
+  uid: constants/uid_root
   status:
     plugin: default_value
     default_value: 1
