--- a/config/clecotools/default/migrate_plus.migration.cleco_product_media_de.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_media_de.yml
@@ -1,15 +1,19 @@
-uuid: 56c467b6-541c-459f-a2e1-d510cc7f042b
+uuid: bbb5ec15-a4db-4314-8a8f-c5aa19e7a4ed
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: UX8OK_7sp9J5JqeBkv7SJDUWOE47JzpyTA4i1d4IGXs
 id: cleco_product_media_de
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: cleco
-label: 'Product Media asset migration for Language de'
+label: 'Product Media asset migration for Language DE'
 source:
+  constants:
+    uid_root: 1
   plugin: url
   data_fetcher_plugin: file
   data_parser_plugin: simple_xml
@@ -61,6 +65,7 @@ process:
   status:
     plugin: default_value
     default_value: 1
+  uid: constants/uid_root
   langcode:
     plugin: default_value
     default_value: de
