--- a/config/clecotools/default/migrate_plus.migration.cleco_product_model.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_model.yml
@@ -1,7 +1,9 @@
-uuid: b7498982-ffea-4401-9a01-bc2e00dd79cb
+uuid: fc210db4-64e9-4cc6-ba9e-afa3f75c5449
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: 9QkATAWvg4zEIG9jB5nK5nHW5MuCPOho5Hm499T0CYY
 id: cleco_product_model
 class: null
 field_plugin_method: null
@@ -10,6 +12,8 @@ migration_tags: null
 migration_group: cleco
 label: 'Product Model content migration'
 source:
+  constants:
+    uid_root: 1
   plugin: url
   data_fetcher_plugin: file
   data_parser_plugin: simple_xml
@@ -42,6 +46,10 @@ source:
       name: remote_web_display_sort_order
       label: 'Web Display Sort Order'
       selector: Values
+    -
+      name: remote_product_status
+      label: 'Product Status'
+      selector: Values
   ids:
     remote_sku:
       type: string
@@ -54,8 +62,12 @@ process:
     plugin: default_value
     default_value: product_model
   status:
-    plugin: default_value
-    default_value: 1
+    plugin: cleco_map_product_status
+    source: remote_product_status
+    condition:
+      AttributeID: SAP_SALES_ORG_STATUS
+      ID: Z2
+  uid: constants/uid_root
   product_specifications_array:
     plugin: cleco_create_product_specifications
     source: remote_product_specifications
