--- a/config/clecotools/default/migrate_plus.migration.cleco_product_model_de.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_model_de.yml
@@ -1,15 +1,19 @@
-uuid: 1a34f236-4066-4e6c-974b-cc72ca5e3b67
+uuid: 4a9c571e-9737-43ee-9462-22da50042bd6
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: ZkNiX0EimWDuELgrB6hnrnl0P-JJINPV_XRNzcbgeO0
 id: cleco_product_model_de
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: cleco
-label: 'Product Model content migration for language de'
+label: 'Product Model content migration for language DE'
 source:
+  constants:
+    uid_root: 1
   plugin: url
   data_fetcher_plugin: file
   data_parser_plugin: simple_xml
@@ -42,6 +46,10 @@ source:
       name: remote_web_display_sort_order
       label: 'Web Display Sort Order'
       selector: Values
+    -
+      name: remote_product_status
+      label: 'Product Status'
+      selector: Values
   ids:
     remote_sku:
       type: string
@@ -54,8 +62,12 @@ process:
     plugin: default_value
     default_value: product_model
   status:
-    plugin: default_value
-    default_value: 1
+    plugin: cleco_map_product_status
+    source: remote_product_status
+    condition:
+      AttributeID: SAP_SALES_ORG_STATUS
+      ID: Z2
+  uid: constants/uid_root
   product_specifications_array:
     plugin: cleco_create_product_specifications
     source: remote_product_specifications
