--- a/config/clecotools/default/migrate_plus.migration.cleco_product_specifications_child.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_specifications_child.yml
@@ -1,14 +1,16 @@
-uuid: 26d665e9-1a86-471a-9975-d8a62cb81dfc
+uuid: 935fdff6-6adf-48f2-a3e2-0572cf4e4ec5
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: k_Jym1z_D8y3OAV7u3QoHmCMsskkNNdPGSE1ckrLGJE
 id: cleco_product_specifications_child
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: cleco
-label: 'Product Specifications'
+label: 'Product Specifications Child level'
 source:
   constants:
     DESCRIPTION_PREFIX: 'PIM Attribute ID'
