--- a/config/clecotools/default/migrate_plus.migration.cleco_product_specifications_child_de.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_specifications_child_de.yml
@@ -1,14 +1,16 @@
-uuid: 9818d331-fe2a-4d7d-bdc7-570ecfa28bf5
+uuid: e5fb0a7d-5177-4aa2-95f1-a0d456982b2e
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: xtjhoIBFbH8FENSVdZGyC7vlhyfGtWbsDewPTB6BXb4
 id: cleco_product_specifications_child_de
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: cleco
-label: 'Product Specifications for language de'
+label: 'Product Specifications Child level for language DE'
 source:
   constants:
     DESCRIPTION_PREFIX: 'PIM Attribute ID'
