--- a/config/clecotools/default/migrate_plus.migration.cleco_product_specifications_child_gb.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_specifications_child_gb.yml
@@ -1,14 +1,16 @@
-uuid: cf5bb42f-8c27-4980-abad-b2699f2ca2d6
+uuid: afdab6fa-933b-4e1c-9202-39ee9c898602
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: xqRRnhoj_nJD-zcaVRJdsV87ir3G42U0Yvt22NdFYVg
 id: cleco_product_specifications_child_gb
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: cleco
-label: 'Product Specifications for language gb'
+label: 'Product Specifications Child level for language GB'
 source:
   constants:
     DESCRIPTION_PREFIX: 'PIM Attribute ID'
