--- a/config/clecotools/default/migrate_plus.migration.cleco_product_specifications_list.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_specifications_list.yml
@@ -1,14 +1,16 @@
-uuid: 5ef8d7b4-2d3d-43fc-beee-ba73c5555afd
+uuid: 7df01e74-02bb-4a0d-bffc-82fc825fa5c2
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: mFh5rnXGlJsxSfqInE__VVGY0x2CapsJgb9055kDUhM
 id: cleco_product_specifications_list
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: cleco
-label: 'Product Specifications list for all languages'
+label: 'Product Specifications second level for all languages'
 source:
   constants:
     DESCRIPTION_PREFIX: 'PIM Attribute ID'
