--- a/config/clecotools/default/migrate_plus.migration.cleco_products_asset_category.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_products_asset_category.yml
@@ -1,14 +1,16 @@
-uuid: 41625fb1-ef12-4803-bd28-361f2bca616f
+uuid: e24fcc5a-d910-4f50-afb1-5a05e68127f7
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: 1VKzvR6ROhEcYPtiK7Y3Z6Q4qiRsyNA-fTLIQDVxZRs
 id: cleco_products_asset_category
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: cleco
-label: Products
+label: 'Update product download Type and Category'
 source:
   constants:
     bool_0: 0
