--- a/config/clecotools/default/migrate_plus.migration.cleco_products_asset_category_gb.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_products_asset_category_gb.yml
@@ -1,14 +1,16 @@
-uuid: 9656fd5a-5611-4681-b562-5b00814648cc
+uuid: 42c15ebf-9459-47fb-91e7-a91f47df41f8
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: cNaSUMZfFSEOOsQ93BW9PhiguHDN85biL6kKZhruB9Q
 id: cleco_products_asset_category_gb
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: cleco
-label: Products
+label: 'Update product download Type and Category for language GB'
 source:
   constants:
     bool_0: 0
