--- a/config/clecotools/default/migrate_plus.migration.cleco_products_de.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_products_de.yml
@@ -1,16 +1,16 @@
-uuid: 0dcc09bf-f754-4741-bf16-11a185cfe581
+uuid: 26f662a1-c281-4c19-97d2-9e918bdca334
 langcode: en
 status: true
 dependencies: {  }
 _core:
-  default_config_hash: bGPGIAMEev9Fc-msUg6FdHmqgpQjpT8J8Amm-a0UUuQ
-id: cleco_products
+  default_config_hash: 9UPWHzRUwbdJnZiWSIC4_ajSKo7F62KMOyMIb3HeEyU
+id: cleco_products_de
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: cleco
-label: 'Product migration'
+label: 'Product migration for Language DE'
 source:
   constants:
     bool_0: 0
@@ -19,7 +19,7 @@ source:
   plugin: url
   data_fetcher_plugin: file
   data_parser_plugin: simple_xml
-  urls: 'public://import/pim_data/pim_export_with_schema.xml'
+  urls: 'public://import/pim_data/pim_export_with_schema_de.xml'
   namespaces: 'http://www.stibosystems.com/step'
   item_selector: '//Product[@UserTypeID="SKU Group"]'
   fields:
@@ -139,7 +139,7 @@ process:
     default_value: basic_html
   language:
     plugin: default_value
-    default_value: en
+    default_value: de
   field_web_display_sort_order:
     plugin: apex_get_attribute_value
     source: remote_product_web_display_sort_order
@@ -147,31 +147,31 @@ process:
   field_downloads:
     plugin: cleco_map_product_downloads
     source: remote_product_downloads
-    migration_instance: cleco_product_media
-    langcode: en
+    migration_instance: cleco_product_media_de
+    langcode: de
   field_product_models:
     plugin: cleco_map_product_model
     source: remote_product_model
-    migration_instance: cleco_product_model
-    langcode: en
+    migration_instance: cleco_product_model_de
+    langcode: de
   field_product_classifications:
     plugin: cleco_map_product_classification
     source: remote_product_classifications
-    migration_instance: cleco_product_classifications_level_two
+    migration_instance: cleco_product_classifications_level_two_de
     classification_type:
       - 'Web Reference'
-    langcode: en
+    langcode: de
   field_media:
     plugin: cleco_map_product_images
     source: remote_product_primary_image
-    migration_instance: cleco_product_media
+    migration_instance: cleco_product_media_de
     asset_type:
       - 'Primary Image'
-    langcode: en
+    langcode: de
   field_product_images:
     plugin: cleco_map_product_images
     source: remote_product_primary_image
-    migration_instance: cleco_product_media
+    migration_instance: cleco_product_media_de
     asset_type:
       - 'Beauty-Glamour Image'
       - 'Cutaway Image'
@@ -188,7 +188,7 @@ process:
       - 'Secondary Image'
       - 'Warning Image'
       - ICON
-    langcode: en
+    langcode: de
   status:
     plugin: cleco_map_product_status
     source: remote_product_status
