--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_model_de.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_model_de.yml
@@ -1,7 +1,9 @@
 id: cleco_product_model_de
-label: Product Model content migration for language de
+label: Product Model content migration for language DE
 migration_group: cleco
 source:
+  constants:
+    uid_root: 1
   plugin: url
   data_fetcher_plugin: file
   data_parser_plugin: simple_xml
@@ -28,6 +30,9 @@ source:
     - name: remote_web_display_sort_order
       label: Web Display Sort Order
       selector: Values
+    - name: remote_product_status
+      label: Product Status
+      selector: Values
 
   ids:
     remote_sku:
@@ -41,8 +46,12 @@ process:
     plugin: default_value
     default_value: product_model
   status:
-    plugin: default_value
-    default_value: 1
+    plugin: cleco_map_product_status
+    source: remote_product_status
+    condition:
+      AttributeID: SAP_SALES_ORG_STATUS
+      ID: Z2
+  uid: constants/uid_root
   # Product Specifications
   product_specifications_array:
     plugin: cleco_create_product_specifications
