--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_specifications_child.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_specifications_child.yml
@@ -1,5 +1,5 @@
 id: cleco_product_specifications_child
-label: Product Specifications
+label: Product Specifications Child level 
 migration_group: cleco
 source:
   constants:
