--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_products.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_products.yml
@@ -1,6 +1,6 @@
 # Migration configuration for cleco_products content.
 id: cleco_products
-label: Products
+label: Product migration
 migration_group: cleco
 source:
   constants:
@@ -48,6 +48,25 @@ source:
     - name: remote_product_images
       label: Product Images
       selector: Values
+    - name: remote_product_downloads
+      label: Product downloads
+      selector: Values
+    - name: remote_product_model
+      label: Product model content
+      selector: Values
+    - name: remote_product_web_display_sort_order
+      label: Web display sort order
+      selector: Values
+    - name: remote_product_classifications
+      label: Product classification
+      selector: Values
+    - name: remote_product_primary_image
+      label: Product Primary Image
+      selector: Values
+    - name: remote_product_status
+      label: Product Status
+      selector: Values
+
   ids:
     remote_sku:
       type: string
@@ -84,9 +103,9 @@ process:
     source: remote_product_upc
     attribute: ATT539
 
-  # Copy Points
+  # Fet features array.
   product_features_array:
-    plugin: apex_get_product_features_array
+    plugin: cleco_get_product_features_array
     source: remote_product_features
   field_product_features_cp:
     plugin: sub_process
@@ -103,40 +122,78 @@ process:
     plugin: default_value
     default_value: basic_html
 
-  # Copy Points
-  product_classification_reference_array:
-    plugin: cleco_get_classification_reference_type_value
-    source: product_classification_reference
-    attribute: Web Reference
-    compare_atrribute: Type
-    fetch_attribute: ClassificationID
-  
-  field_product_classifications:
-    plugin: cleco_set_taxonomy_term
-    source: '@product_classification_reference_array'
-    source_migration_id: cleco_product_classifications
-    mutiple: 0
-
   language: 
     plugin: default_value
     default_value: en
 
-  # Primary Image.
-  listing_image:
-    source: remote_listing_image
-    plugin: apex_get_listing_image
-  'field_media/target_id': '@listing_image'
+  # Newly added Mappings.
+  field_web_display_sort_order:
+    plugin: apex_get_attribute_value
+    source: remote_product_web_display_sort_order
+    attribute: ATT15738
 
-  # Product Images.
-  product_images_array:
-    source: remote_product_images
-    plugin: apex_get_product_images
+  # Process product downloads.
+  field_downloads:
+    plugin: cleco_map_product_downloads
+    source: remote_product_downloads
+    migration_instance: cleco_product_media
+    langcode: en
+
+  # Process product model content.
+  field_product_models:
+    plugin: cleco_map_product_model
+    source: remote_product_model
+    migration_instance: cleco_product_model
+    langcode: en
+
+  #Process product classification
+  field_product_classifications:
+    plugin: cleco_map_product_classification
+    source: remote_product_classifications
+    migration_instance: cleco_product_classifications_level_two
+    classification_type:
+      - Web Reference
+    langcode: en
+
+  #Process product primary image
+  field_media:
+    plugin: cleco_map_product_images
+    source: remote_product_primary_image
+    migration_instance: cleco_product_media
+    asset_type:
+      - Primary Image
+    langcode: en
+
+  #Process product media all images
   field_product_images:
-    plugin: sub_process
-    source: '@product_images_array'
-    include_source: true
-    process:
-      target_id: media_id
+    plugin: cleco_map_product_images
+    source: remote_product_primary_image
+    migration_instance: cleco_product_media
+    asset_type:
+      - Beauty-Glamour Image
+      - Cutaway Image
+      - Highlight Image
+      - In Package Image
+      - In Use Image
+      - Literature
+      - Part Shot 1
+      - Part Shot 2
+      - Part Shot 3
+      - Part Shot 4
+      - Part Shot 5
+      - Product Logo
+      - Secondary Image
+      - Warning Image
+      - ICON
+    langcode: en
+
+  status:
+    plugin: cleco_map_product_status
+    source: remote_product_status
+    condition:
+      AttributeID: SAP_SALES_ORG_STATUS
+      ID: Z2
+
 destination:
   plugin: apex_product
   bundle: product
