APEX-272: Issue fixes

--- a/config/campbell/default/views.view.homepage_news.yml
+++ b/config/campbell/default/views.view.homepage_news.yml
@@ -234,7 +234,7 @@ display:
             prefix: ''
             suffix: ''
             target: ''
-            nl2br: true
+            nl2br: false
             max_length: 80
             word_boundary: true
             ellipsis: true
