--- a/config/campbell/default/views.view.markers_map.yml
+++ b/config/campbell/default/views.view.markers_map.yml
@@ -2081,7 +2081,7 @@ display:
           plugin_id: text
           empty: true
           content:
-            value: 'Need to add or update your location information in our database? <a href="/about/contact-us?select_type=Add/Adjust Your Location Information">CLICK HERE</a>'
+            value: 'Need to add or update your location information in our database? <a href="/about-us/contact-us?select_type=Add/Adjust Your Location Information">CLICK HERE</a>'
             format: basic_html
           tokenize: false
       display_extenders: {  }
