--- a/config/campbell/default/views.view.featured_menu_product.yml
+++ b/config/campbell/default/views.view.featured_menu_product.yml
@@ -181,7 +181,7 @@ display:
         options:
           perm: 'access content'
       cache:
-        type: tag
+        type: none
         options: {  }
       empty: {  }
       sorts:
