APS-95:remove unwanted GTM configuration

--- a/config/gearwrench/default/google_tag.container.google_tag_59x3zt8.yml
+++ b/config/gearwrench/default/google_tag.container.google_tag_59x3zt8.yml
@@ -1,10 +1,7 @@
 uuid: 18bd752e-bd4f-4d22-8e0c-b69d512fd59d
 langcode: en
-status: true
-dependencies:
-  module:
-    - ctools
-    - webform
+status: false
+dependencies: {  }
 id: google_tag_59x3zt8
 label: 'Google Tag 59X3ZT8'
 weight: 0
