--- a/config/crescenttool/default/google_tag.container.google_tag_mzk37hc.yml
+++ b/config/crescenttool/default/google_tag.container.google_tag_mzk37hc.yml
@@ -1,10 +1,7 @@
 uuid: 13b470f6-8fe5-4d0f-8cf1-c70290e93f90
 langcode: en
-status: true
-dependencies:
-  module:
-    - ctools
-    - webform
+status: false
+dependencies: {  }
 id: google_tag_mzk37hc
 label: 'Google Tag MZK37HC'
 weight: 0
