--- a/config/crescenttool/default/google_tag.container.primary.yml
+++ b/config/crescenttool/default/google_tag.container.primary.yml
@@ -32,9 +32,7 @@ path_list: |-
   /user/*/edit*
   /user/*/cancel*
 role_toggle: 'exclude listed'
-role_list:
-  authenticated: authenticated
-  administrator: administrator
+role_list: {  }
 status_toggle: 'exclude listed'
 status_list: |-
   403
