--- a/config/crescenttool/default/core.entity_view_display.node.product_category.default.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.product_category.default.yml
@@ -7,16 +7,25 @@ dependencies:
     - field.field.node.product_category.field_category_facets
     - field.field.node.product_category.field_classification_id
     - field.field.node.product_category.field_media
+    - field.field.node.product_category.field_meta_tags
     - field.field.node.product_category.field_product_classifications
     - field.field.node.product_category.field_show_set_filter
     - node.type.product_category
   module:
+    - metatag
     - user
 id: node.product_category.default
 targetEntityType: node
 bundle: product_category
 mode: default
 content:
+  field_meta_tags:
+    type: metatag_empty_formatter
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 2
+    region: content
   field_show_set_filter:
     type: boolean
     label: above
