--- a/config/crescenttool/default/core.entity_view_display.node.product_category.teaser.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.product_category.teaser.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.product_category.field_category_facets
     - field.field.node.product_category.field_classification_id
     - field.field.node.product_category.field_media
+    - field.field.node.product_category.field_meta_tags
     - field.field.node.product_category.field_product_classifications
     - field.field.node.product_category.field_show_set_filter
     - node.type.product_category
@@ -36,6 +37,7 @@ hidden:
   field_category_facets: true
   field_classification_id: true
   field_media: true
+  field_meta_tags: true
   field_product_classifications: true
   field_show_set_filter: true
   langcode: true
