--- a/config/crescenttool/default/migrate_plus.migration.crescenttool_product_category_pages_level_two.yml
+++ b/config/crescenttool/default/migrate_plus.migration.crescenttool_product_category_pages_level_two.yml
@@ -34,6 +34,10 @@ source:
       name: remote_classification
       label: Classification
       selector: ../Classification
+    -
+      name: remote_meta_category
+      label: 'Product Categorys'
+      selector: MetaData
   ids:
     remote_id:
       type: string
@@ -140,6 +144,12 @@ process:
     process:
       vocabulary_id: vid
       target_id: target_id
+  field_meta_tags:
+    plugin: get_category_meta_value
+    source: remote_meta_category
+    allowed_attributes:
+      - ATT880759
+      - ATT880758
   category_facets_array:
     plugin: get_all_level_2_category_facets
     source: remote_id
