--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -104,7 +104,7 @@ pipelines:
       - step: *build-package
       - step:
           <<: *deploy-package
-          deployment: Staging
+          deployment: Staging SEO
     development:
       - step: *build-package
       - step:
