APEX-416: updated the Brand Timeline path and banner order

--- a/config/campbell/default/views.view.brand_timeline.yml
+++ b/config/campbell/default/views.view.brand_timeline.yml
@@ -480,7 +480,7 @@ display:
     display_options:
       display_description: ''
       display_extenders: {  }
-      path: brand-timeline
+      path: about-us/brand-timeline
     cache_metadata:
       max-age: -1
       contexts:
