--- a/config/campbell/default/block.block.heroimagebrandtimeline.yml
+++ b/config/campbell/default/block.block.heroimagebrandtimeline.yml
@@ -12,7 +12,7 @@ dependencies:
 id: heroimagebrandtimeline
 theme: campbell
 region: pre_content
-weight: -17
+weight: -20
 provider: null
 plugin: 'fixed_block_content:hero_image_brand_timeline'
 settings:
@@ -25,4 +25,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: /brand-timeline
+    pages: /about-us/brand-timeline
