--- a/docroot/modules/custom/campbell_common/campbell_common.routing.yml
+++ b/docroot/modules/custom/campbell_common/campbell_common.routing.yml
@@ -5,3 +5,15 @@ campbell_common.example:
     _controller: '\Drupal\campbell_common\Controller\CampbellCommonController::products'
   requirements:
     _permission: 'access content'
+
+campbell_common.product_image_download:
+  path: '/campbell-product-image-download/{node}'
+  defaults:
+    _controller: '\Drupal\campbell_common\Controller\ProductImageController::downloadImages'
+  requirements:
+    _permission: 'access content'
+  options:
+    parameters:
+      node:
+        type: entity:node
+
