--- a/config/clecotools/default/migrate_plus.migration.cleco_products_de.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_products_de.yml
@@ -2,8 +2,6 @@ uuid: 26f662a1-c281-4c19-97d2-9e918bdca334
 langcode: en
 status: true
 dependencies: {  }
-_core:
-  default_config_hash: 9UPWHzRUwbdJnZiWSIC4_ajSKo7F62KMOyMIb3HeEyU
 id: cleco_products_de
 class: null
 field_plugin_method: null
@@ -195,6 +193,9 @@ process:
     condition:
       AttributeID: SAP_SALES_ORG_STATUS
       ID: Z2
+  langcode:
+    plugin: default_value
+    default_value: de
 destination:
   plugin: apex_product
   bundle: product
