--- a/config/clecotools/default/migrate_plus.migration.cleco_products_gb.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_products_gb.yml
@@ -1,9 +1,9 @@
-uuid: a1a737b7-689c-4b79-91d3-9b4219a7a7f5
+uuid: e77cf9b7-d943-4464-8978-884a96eb511c
 langcode: en
 status: true
 dependencies: {  }
 _core:
-  default_config_hash: WksLpzdf0IhRs7PDncD0gW2qWxhLvltXTu_DuovjIIs
+  default_config_hash: 0bhjh_Zn_jVp4zXhR7dVgAHaxr-R4__YrX1TXfDbU2U
 id: cleco_products_gb
 class: null
 field_plugin_method: null
@@ -137,9 +137,6 @@ process:
   field_footnotes/format:
     plugin: default_value
     default_value: basic_html
-  language:
-    plugin: default_value
-    default_value: gb
   field_web_display_sort_order:
     plugin: apex_get_attribute_value
     source: remote_product_web_display_sort_order
@@ -195,6 +192,9 @@ process:
     condition:
       AttributeID: SAP_SALES_ORG_STATUS
       ID: Z2
+  langcode:
+    plugin: default_value
+    default_value: gb
 destination:
   plugin: apex_product
   bundle: product
