--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_products_de.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_products_de.yml
@@ -122,10 +122,6 @@ process:
     plugin: default_value
     default_value: basic_html
 
-  language: 
-    plugin: default_value
-    default_value: de
-
   # Newly added Mappings.
   field_web_display_sort_order:
     plugin: apex_get_attribute_value
@@ -194,6 +190,9 @@ process:
       AttributeID: SAP_SALES_ORG_STATUS
       ID: Z2
 
+  langcode:
+    plugin: default_value
+    default_value: de
 destination:
   plugin: apex_product
   bundle: product
