--- a/config/clecotools/default/migrate_plus.migration.cleco_products_de.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_products_de.yml
@@ -1,7 +1,9 @@
-uuid: 26f662a1-c281-4c19-97d2-9e918bdca334
+uuid: e6cf9a5d-ea2f-4465-800f-7646bc301fd2
 langcode: en
 status: true
 dependencies: {  }
+_core:
+  default_config_hash: BddF0o-TXs0bukPCT0XnEOrzitwIED8HJkBZYOMi9-k
 id: cleco_products_de
 class: null
 field_plugin_method: null
@@ -135,9 +137,6 @@ process:
   field_footnotes/format:
     plugin: default_value
     default_value: basic_html
-  language:
-    plugin: default_value
-    default_value: de
   field_web_display_sort_order:
     plugin: apex_get_attribute_value
     source: remote_product_web_display_sort_order
