APS-60: implemented import, export of redirect.

--- a/docroot/modules/custom/apex_common/apex_common.routing.yml
+++ b/docroot/modules/custom/apex_common/apex_common.routing.yml
@@ -8,3 +8,11 @@ apex_common.product_image_download:
     parameters:
       node:
         type: entity:node
+apex_common.RedirectURLimport:
+  path: '/admin/config/development/redirect-url-import'
+  defaults:
+    _form: '\Drupal\apex_common\Form\RedirectURLImportForm'
+    _title: 'APEX Import Redirect URL'
+  requirements:
+    _permission: 'administer site configuration'
+
