--- a/config/campbell/default/core.extension.yml
+++ b/config/campbell/default/core.extension.yml
@@ -109,6 +109,7 @@ module:
   paragraphs_component_field: 0
   path: 0
   path_alias: 0
+  path_redirect_import: 0
   permissions_filter: 0
   purge: 0
   purge_queuer_coretags: 0
