--- a/config/campbell/default/core.entity_view_display.paragraph.image_and_text.default.yml
+++ b/config/campbell/default/core.entity_view_display.paragraph.image_and_text.default.yml
@@ -35,7 +35,7 @@ content:
     type: entity_reference_entity_view
     label: hidden
     settings:
-      view_mode: default
+      view_mode: embed
       link: false
     third_party_settings: {  }
     weight: 0
@@ -51,7 +51,7 @@ content:
     type: entity_reference_entity_view
     label: hidden
     settings:
-      view_mode: default
+      view_mode: embed
       link: false
     third_party_settings: {  }
     weight: 3
