--- a/config/clecotools/default/field.field.media.product_downloads.field_media_file.yml
+++ b/config/clecotools/default/field.field.media.product_downloads.field_media_file.yml
@@ -21,7 +21,7 @@ settings:
   handler: 'default:file'
   handler_settings: {  }
   file_directory: '[date:custom:Y]-[date:custom:m]'
-  file_extensions: 'txt doc docx pdf dxf xls xlsx ifc xml zip exe utf8'
+  file_extensions: 'txt doc docx pdf dxf xls xlsx ifc xml zip exe utf8 mp4'
   max_filesize: ''
   description_field: false
 field_type: file
