--- a/config/clecotools/default/migrate_plus.migration.cleco_product_media.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_media.yml
@@ -1,9 +1,7 @@
-uuid: 17e75645-10fe-4541-81da-83cd4fbd6827
+uuid: ee293962-00c3-4352-89f4-45a1449478d4
 langcode: en
 status: true
 dependencies: {  }
-_core:
-  default_config_hash: ljZJ1R_RtK0Ss_PZL674G3XtTqKCSonNFjW3-9tdous
 id: cleco_product_media
 class: null
 field_plugin_method: null
@@ -76,7 +74,7 @@ process:
   field_media_file:
     plugin: cleco_get_product_images
     get_type: fid
-    source: asset_id
+    source: asset_values
     process_pdf: 1
     langcode: en
     media_type: pdf
@@ -93,7 +91,7 @@ process:
   field_listing_image:
     plugin: cleco_get_product_images
     get_type: mid
-    source: asset_id
+    source: asset_values
     process_pdf: 1
     langcode: en
     media_type: image
@@ -110,7 +108,7 @@ process:
   field_media_image:
     plugin: cleco_get_product_images
     get_type: fid
-    source: asset_id
+    source: asset_values
     process_image: 1
     langcode: en
     media_type: image
