APEX-414: updated the favicon path

--- a/config/clecotools/default/cleco.settings.yml
+++ b/config/clecotools/default/cleco.settings.yml
@@ -7,5 +7,5 @@ logo:
   use_default: 1
 favicon:
   use_default: 0
-  path: 'public://favicon.png'
+  path: themes/custom/cleco/dist/img/favicon.png
   mimetype: image/png
